Update: Admin page

--- a/Spotify/SPOTIFYServer/login/Templates/Spotify_login.html
+++ b/Spotify/SPOTIFYServer/login/Templates/Spotify_login.html
@@ -151,6 +151,8 @@
     </style>
 </head>
 <body>
+    {%if status == 'Lỗi' %}
+    {%endif%}
     <div class="background">
         <div class="shape"></div>
         <div class="shape"></div>
