--- a/Spotify/SPOTIFYServer/login/Templates/test_export.html
+++ b/Spotify/SPOTIFYServer/login/Templates/test_export.html
@@ -57,8 +57,6 @@ body {
 .right {
   flex: 144%;
   padding: 15px;
-  border: 5px solid green;
-  margin: 20px;
 }
 
 /* Style the search box */
@@ -94,13 +92,12 @@ body {
 <div class="topnav">
   <a class="active" href="#"><i class="fa fa-fw fa-home"></i> Home</a>
   <a href="#"><i class="fa fa-fw fa-search"></i> Search</a>
-  <a href="#"><i class="fa fa-fw fa-cubes"></i> Functions</a>
   <a href="#"><i class="fa fa-fw fa-envelope"></i> Contact</a>
   <a href="#about"><i class="fa fa-fw fa-info-circle"></i>About</a>
   <a href="#Logout" class="split"><i class="fa fa-fw fa-sign-out"></i>Logout</a>
 </div>
 
-{% comment %} <div class="row">
+<div class="row">
     <div class="left" style="background-color:#bbb;">
       <h2>Menu</h2>
       <input type="text" id="mySearch" onkeyup="myFunction()" placeholder="Search.." title="Type in a category">
@@ -117,23 +114,7 @@ body {
       <p>Some other text..Some text..Some text..Some text..Some text..Some text..Some text..Some text..</p>
       <p>Some text..</p>
     </div>
-</div> {% endcomment %}
-
-<div class="right" style="background-color:#ddd;">
-    <h2>Import Data</h2>
-    <p>Start to type for a specific category inside the search bar to "filter" the search options.</p>
-    <p>Some text..Some text..Some text..Some text..Some text..Some text..Some text..Some text..</p>
-    <p>Some other text..Some text..Some text..Some text..Some text..Some text..Some text..Some text..</p>
-    <p>Some text..</p>
-  </div>
-  
-  <div class="right" style="background-color:#ddd;">
-    <h2>Export Report</h2>
-    <p>Export all accounts which has access <a href='http://127.0.0.1:8000/Spot-join/'>Join Family Gate</a></p>
-    <form action="/exportReport">
-        <button id="exportReport-btn" class='er-btn'>Export</button>
-    </form>
-  </div>
+</div>
 
   <script>
     function myFunction() {
