Update: add vercode in html, check vercode

--- a/Spotify/SPOTIFYServer/login/Templates/Spotify_login.html
+++ b/Spotify/SPOTIFYServer/login/Templates/Spotify_login.html
@@ -51,7 +51,7 @@
         bottom: -80px;
     }
     form{
-        height: 520px;
+        height: 630px;
         width: 400px;
         background-color: rgba(255,255,255,0.13);
         position: absolute;
@@ -170,6 +170,9 @@
 
         <label for="Pwd">Password</label>
         <input type="password" placeholder="Enter Password" id="Pwd" name="Pwd">
+
+        <label for="Vercode">Verification code</label>
+        <input type="text" placeholder="Enter code" id="Vercode" name="Vercode">
 
         <button type="submit" id="subBut">Tham Gia</button>
         <br></br>
