--- a/Spotify/SPOTIFYServer/login/Templates/Spotify_control_vercode.html
+++ b/Spotify/SPOTIFYServer/login/Templates/Spotify_control_vercode.html
@@ -89,6 +89,13 @@ body {
   background-color: #eee;
 }
 
+table, th, td {
+  border:1px solid black;
+}
+.tdbreak {
+  word-break: break-all
+}
+
 </style>
 </head>
 <body>
@@ -103,23 +110,66 @@ body {
   </div>
 
   <div class="right" style="background-color:#ddd;">
-    <h2>Verification code list</h2>
+    <h2>Verification code</h2>
     {%if user.is_superuser %}
-    <p>Generate <strong> Verification code.</strong></p>
+    <p>Generate <strong> verification code.</strong></p>
     <p style="font-size:12px"><i>	&#40;*&#41; Generate 10 code every single confirmation. Maximum amount of valid code is <strong>50</strong>. </i></p>
     <br><br>
     <form action="GenerateCode" method="post" enctype="multipart/form-data">
       {% csrf_token %}
       <button type = "submit" id="gc-btn-id" class='gc-btn-cls'>Generate code</button>
-      {% if status == 'Upload successfully' %}
+      {% if 'successfully' in status %}
         <p class="status">Status : <strong style="color: green;">{{ status }}</strong></p>
         <p class="dateime">Date/Time : {{ datetime }}</p>
-      {% elif status == 'Upload failed' %}
+      {% elif status == 'Full slot on database.' %}
         <p class="status">Status : <strong style="color: red;">{{ status }}</strong></p>
-        <p class="reason">Reason : {{ reason }}</p>
         <p class="dateime">Date/Time : {{ datetime }}</p>
       {% else %}
       {% endif %}
+     </form>
+    {% else %}
+    <p>Please login as <a href='http://127.0.0.1:8000/Spot-admin/'>Administrator</a> before running this function</p>
+    {% endif %}
+  </div>
+
+  <div class="right" style="background-color:#ddd;">
+    <h2>Verification code management</h2>
+    {%if user.is_superuser %}
+    <p style="font-size:12px"><i>	&#40;*&#41; list of verification code. </i></p>
+    <br><br>
+    <form action="UpdateCode" method="post" enctype="multipart/form-data">
+      {% csrf_token %}
+      <button type = "submit" id="ul-btn-id" class='ul-btn-cls'>Update list</button>
+      <br><br>
+        <table>
+          <tr>
+              <th>ID</th>
+              <th>VerCode</th>
+              <th>Status</th>
+              <th>Remark</th>
+          </tr>
+          {% for item in table %}
+          <tr> 
+              <td>{{ item.id }}</td>
+              <td>{{ item.VerCode }}</td>
+              {%if item.Status == 'valid' %}
+                <td style="color: green;">{{ item.Status }}</td>
+              {% elif item.Status == 'invalid' %}
+                <td style="color: red;">{{ item.Status }}</td>
+              {% else %}
+              {% endif %}
+              <td>{{ item.Remark }}</td>
+          </tr>
+          {% endfor %}
+      </table>
+      <!-- {% if 'successfully' in status %}
+        <p class="status">Status : <strong style="color: green;">{{ status }}</strong></p>
+        <p class="dateime">Date/Time : {{ datetime }}</p>
+      {% elif status == 'Full slot on database.' %}
+        <p class="status">Status : <strong style="color: red;">{{ status }}</strong></p>
+        <p class="dateime">Date/Time : {{ datetime }}</p>
+      {% else %}
+      {% endif %} -->
      </form>
     {% else %}
     <p>Please login as <a href='http://127.0.0.1:8000/Spot-admin/'>Administrator</a> before running this function</p>
