--- a/Spotify/SPOTIFYServer/login/Templates/Spotify_control_vercode.html
+++ b/Spotify/SPOTIFYServer/login/Templates/Spotify_control_vercode.html
@@ -45,22 +45,38 @@ body {
   display: flex;
 }
 
-/* Left column (menu) */
-.left {
-  flex: 35%;
-  padding: 15px 0;
-}
-
-.left h2 {
-  padding-left: 8px;
-}
-
-/* Right column (page content) */
+/* right column (menu) */
 .right {
-  flex: 144%;
+  /* flex: 35%; */
+  padding: 15px;
+  margin: 20px;
+  border: 5px solid green;
+  float:left;/*Add float left*/
+  width: 40%;
+}
+
+.right h2 {
+  padding-right: 8px;
+}
+
+/* left column (page content) */
+.left {
+  width: 50%;
+  /* flex: 70%; */
+  /* padding: 15px; */
+  /* border: 5px solid green; */
+  margin: 20px;
+  float:left;
+}
+
+/* left column (page content) */
+.subleft {
+  width: 100%;
+  /* flex: 70%; */
   padding: 15px;
   border: 5px solid green;
-  margin: 20px;
+  /* margin: 20px; */
+  float:left;
 }
 
 /* Style the search box */
@@ -96,6 +112,13 @@ table, th, td {
   word-break: break-all
 }
 
+/* Clear floats (clearfix hack) */
+.vcl-btn-group:after {
+  content: "";
+  clear: both;
+  display: table;
+}
+
 </style>
 </head>
 <body>
@@ -109,90 +132,157 @@ table, th, td {
     <a href="{% url 'LogoutAdmin' %}" class="split"><i class="fa fa-fw fa-sign-out"></i>Logout</a>
   </div>
 
-  <div class="right" style="background-color:#ddd;">
-    <h2>Verification code</h2>
-    {%if user.is_superuser %}
-    <p>Generate <strong> verification code.</strong></p>
-    <p style="font-size:12px"><i>	&#40;*&#41; Generate 10 code every single confirmation. Maximum amount of valid code is <strong>50</strong>. </i></p>
-    <br><br>
-    <form action="GenerateCode" method="post" enctype="multipart/form-data">
-      {% csrf_token %}
-      <button type = "submit" id="gc-btn-id" class='gc-btn-cls'>Generate code</button>
-      {% if 'successfully' in status %}
-        <p class="status">Status : <strong style="color: green;">{{ status }}</strong></p>
-        <p class="dateime">Date/Time : {{ datetime }}</p>
-      {% elif status == 'Full slot on database.' %}
-        <p class="status">Status : <strong style="color: red;">{{ status }}</strong></p>
-        <p class="dateime">Date/Time : {{ datetime }}</p>
-      {% else %}
-      {% endif %}
-     </form>
-    {% else %}
-    <p>Please login as <a href='http://127.0.0.1:8000/Spot-admin/'>Administrator</a> before running this function</p>
-    {% endif %}
-  </div>
-
-  <div class="right" style="background-color:#ddd;">
-    <h2>Verification code management</h2>
-    {%if user.is_superuser %}
-    <p style="font-size:12px"><i>	&#40;*&#41; list of verification code. </i></p>
-    <br><br>
-    <form action="UpdateCode" method="post" enctype="multipart/form-data">
-      {% csrf_token %}
-      <button type = "submit" id="ul-btn-id" class='ul-btn-cls'>Update list</button>
+  <div class="left" style="background-color:#ddd;">
+    <div class="subleft" style="background-color:#ddd;">
+      <h2>Verification code</h2>
+      {%if user.is_superuser %}
+      <p>Generate <strong> verification code.</strong> Current valid code is <i><strong style="color: blue;">{{ valid_amount }}</strong></i>.</p>
+      <p style="font-size:12px"><i>	&#40;*&#41; Generate 10 code every single confirmation. Maximum amount of valid code is 50. </i></p>
       <br><br>
-        <table>
-          <tr>
-              <th>ID</th>
-              <th>VerCode</th>
-              <th>Status</th>
-              <th>Remark</th>
-          </tr>
-          {% for item in table %}
-          <tr> 
-              <td>{{ item.id }}</td>
-              <td>{{ item.VerCode }}</td>
-              {%if item.Status == 'valid' %}
-                <td style="color: green;">{{ item.Status }}</td>
-              {% elif item.Status == 'invalid' %}
-                <td style="color: red;">{{ item.Status }}</td>
-              {% else %}
-              {% endif %}
-              <td>{{ item.Remark }}</td>
-          </tr>
-          {% endfor %}
-      </table>
-      <!-- {% if 'successfully' in status %}
-        <p class="status">Status : <strong style="color: green;">{{ status }}</strong></p>
-        <p class="dateime">Date/Time : {{ datetime }}</p>
-      {% elif status == 'Full slot on database.' %}
-        <p class="status">Status : <strong style="color: red;">{{ status }}</strong></p>
-        <p class="dateime">Date/Time : {{ datetime }}</p>
+      <form action="GenerateCode" method="post" enctype="multipart/form-data">
+        {% csrf_token %}
+        <button type = "submit" id="gc-btn-id" class='gc-btn-cls' onclick="VCConfirmFunction()">Generate code</button>
+        {% if 'successfully' in status %}
+          <p class="status">Status : <strong style="color: green;">{{ status }}</strong></p>
+          <p class="dateime">Date/Time : {{ datetime }}</p>
+        {% elif status == 'Full slot on database.' %}
+          <p class="status">Status : <strong style="color: red;">{{ status }}</strong></p>
+          <p class="dateime">Date/Time : {{ datetime }}</p>
+        {% else %}
+        {% endif %}
+      </form>
       {% else %}
-      {% endif %} -->
-     </form>
-    {% else %}
-    <p>Please login as <a href='http://127.0.0.1:8000/Spot-admin/'>Administrator</a> before running this function</p>
-    {% endif %}
+      <p>Please login as <a href='http://127.0.0.1:8000/Spot-admin/'>Administrator</a> before running this function</p>
+      {% endif %}
+    </div>
+
+    <div class="subleft" style="background-color:#ddd;">
+      <h2>Verification code management</h2>
+      {%if user.is_superuser %}
+      <p style="font-size:12px"><i>	&#40;*&#41; Manage verification code. </i></p>
+      <br><br>
+      <form action="UpdateCode" method="post" enctype="multipart/form-data">
+      {% csrf_token %}
+        <div class="vcl-input-group"></div>
+          <label for="CodeID">Code ID: </label>
+          <input type="text" placeholder="Enter ID" id="cid-input-id" name="cid-input-name">
+          <label for="Edittovalue">Edit To: </label>
+          <select style="text-align: center;" id="VClistedit_id" name = "VClistedit_n" class = "VClistedit_cls"> 
+            <option value ="valid">valid</option>
+            <option value ="used">used</option>
+            <option value ="disabled">disabled</option>
+          </select>
+        <br><br>
+        <div class="vcl-btn-group">
+          <button type = "submit" id="ul-btn-id" class='ul-btn-cls' name="ul-btn-n">Reload</button>
+          <button type = "submit" id="dl-btn-id" class='dl-btn-cls' name="dl-btn-n">Delete</button>
+          <button type = "submit" id="el-btn-id" class='el-btn-cls' name="el-btn-n">Update</button>
+          {% if status == 'Success' %}
+            <p class="status">Status : <strong style="color: green;">{{ status }}</strong></p>
+            <p class="dateime">Date/Time : {{ time }}</p>
+          {% elif status == 'Error' %}
+            <p class="status">Status : <strong style="color: red;">{{ status }}</strong></p>
+            <p class="reason">Reason : {{ detail }}</p>
+            <p class="dateime">Date/Time : {{ time }}</p>
+          {% else %}
+          {% endif %}
+        </div>
+        <br><br>
+          <label for="Filter">Filter: </label>
+          <select style="text-align: center;" id="VClistfilter_id" name = "VClistfilter_n" class = "VClistfilter_cls"> 
+              <option value ="2">Status</option>
+              <option value ="0">ID</option>
+              <option value ="1">Verification code</option>
+              <option value ="3">Remark</option>
+              <option value ="All">All</option>
+          </select>
+          <input type="text" id="Search" onkeyup="SearchFunction()" placeholder="Search for names.." title="Type in a name">
+          
+      </form>
+      {% else %}
+      <p>Please login as <a href='http://127.0.0.1:8000/Spot-admin/'>Administrator</a> before running this function</p>
+      {% endif %}
+    </div>
   </div>
 
+  <div class="right" style="background-color:#ddd;">
+    <h2>Verification list</h2>
+    <p style="font-size:12px"><i>	&#40;*&#41; list of verification code. </i></p>
+    <table id="vcl-table-id">
+      <tr>
+          <th width="10%">ID</th>
+          <th width="20%">Verification code</th>
+          <th width="10%">Status</th>
+          <th width="60%">Remark</th>
+      </tr>
+      {% for item in table %}
+      <tr> 
+          <td>{{ item.id }}</td>
+          <td>{{ item.VerCode }}</td>
+          {%if item.Status == 'valid' %}
+            <td style="color: green;">{{ item.Status }}</td>
+          {% elif item.Status == 'used' %}
+            <td style="color: red;">{{ item.Status }}</td>
+          {% elif item.Status == 'disabled' %}
+            <td style="color: orange;">{{ item.Status }}</td>
+          {% else %}
+          {% endif %}
+          <td>{{ item.Remark }}</td>
+      </tr>
+      {% endfor %}
+    </table>
+  </div>
+
+
+
+  <!-- JAVASCRIPT:: -->
+  <!-- Filter: -->
   <script>
-    function myFunction() {
-      var input, filter, ul, li, a, i;
-      input = document.getElementById("mySearch");
+    function SearchFunction() {
+      var input, filter, table, tr, td, i, txtValue;
+      var e = document.getElementById("VClistfilter_id");
+      var select_value = e.value;
+      input = document.getElementById("Search");
       filter = input.value.toUpperCase();
-      ul = document.getElementById("myMenu");
-      li = ul.getElementsByTagName("li");
-      for (i = 0; i < li.length; i++) {
-        a = li[i].getElementsByTagName("a")[0];
-        if (a.innerHTML.toUpperCase().indexOf(filter) > -1) {
-          li[i].style.display = "";
-        } else {
-          li[i].style.display = "none";
-        }
+      table = document.getElementById("vcl-table-id");
+      tr = table.getElementsByTagName("tr");
+      for (i = 0; i < tr.length; i++) {
+        td = tr[i].getElementsByTagName("td")[select_value];  
+        if (td) {
+          txtValue = td.textContent || td.innerText;
+          if (txtValue.toUpperCase().indexOf(filter) > -1) {
+            tr[i].style.display = "";
+          } else {
+            tr[i].style.display = "none";
+          }
+        }       
       }
     }
     </script>
+  
+  <!-- Confirm create ver code: -->
+  <script>
+    function VCConfirmFunction() {
+      let text = "Please confirm:!\nPress OK to create code.";
+      if (confirm(text) == true) {
+        text = "You pressed OK!";
+      } else {
+        text = "You canceled!";
+      }
+    }
+  </script>
+
+  <!-- Confirm delete ver code: -->
+  <script>
+    function VCDeleteConfirmFunction() {
+      let text = "Please confirm:!\nPress OK to delete code.";
+      if (confirm(text) == true) {
+        text = "You pressed OK!";
+      } else {
+        text = "You canceled!";
+      }
+    }
+  </script>
 
 </body>
 </html>
