--- a/Spotify/SPOTIFYServer/login/Templates/Spotify_control.html
+++ b/Spotify/SPOTIFYServer/login/Templates/Spotify_control.html
@@ -63,6 +63,48 @@ body {
   margin: 20px;
 }
 
+
+/* right_2 column (menu) */
+.right_2 {
+  /* flex: 35%; */
+  padding: 15px;
+  margin: 20px;
+  border: 5px solid green;
+  float:left;/*Add float left*/
+  width: 40%;
+}
+
+.right_2 h2 {
+  padding-right: 8px;
+}
+
+/* left_2 column (page content) */
+.left_2 {
+  width: 50%;
+  /* flex: 70%; */
+  /* padding: 15px; */
+  /* border: 5px solid green; */
+  margin: 20px;
+  float:left;
+}
+
+/* subleft column (page content) */
+.subleft {
+  width: 100%;
+  /* flex: 70%; */
+  padding: 15px;
+  border: 5px solid green;
+  /* margin: 20px; */
+  float:left;
+}
+
+table, th, td {
+  border:1px solid black;
+}
+.tdbreak {
+  word-break: break-all
+}
+
 /* Style the search box */
 #mySearch {
   width: 100%;
@@ -102,15 +144,23 @@ body {
     <a href="{% url 'LogoutAdmin' %}" class="split"><i class="fa fa-fw fa-sign-out"></i>Logout</a>
   </div>
   <!-- COMMON -->
- 
  <div class="right" style="background-color:#ddd;">
     <h2>Upload Data</h2>
     {%if user.is_superuser %}
-    <p>Upload data <strong> &#91;Master accounts, Fammily join link, Nation, Member capacity...&#93;</strong> to database. It's stored for customer to join in system.</p>
+    <p>Import data <strong> &#91;Master accounts, Fammily join link, Nation, Member capacity...&#93;</strong> to database. It's stored for customer to join in system.</p>
     <br><br>
     <form action="uploadData" method="post" enctype="multipart/form-data">
       {% csrf_token %}
       <input type = "file" value = "Choose" name = "uploadData-name">
+      <select name = "nationsel_n" class = "nationsel_cls"> 
+        <optgroup label="Choose nation">
+          <option value ="IN">Indian</option>
+          <option value ="TR">Turkey</option>
+          <option value ="VN">Vietnam</option>
+          <option value ="US">USA</option>
+          <option value ="JP">Japan</option>
+        </optgroup>
+      </select>
       <button type = "submit" id="zzz-btn" class='ud-btn'>Upload</button>
       {% if status == 'Upload successfully' %}
         <p class="status">Status : <strong style="color: green;">{{ status }}</strong></p>
@@ -175,6 +225,80 @@ body {
     {% endif %}
   </div>
 
+  <!-- Vercode -->
+  <div class="left_2" style="background-color:#ddd;">
+    <div class="subleft" style="background-color:#ddd;">
+      <h2>Verification code</h2>
+      {%if user.is_superuser %}
+      <p>Generate <strong> verification code.</strong> Current valid code is <i><strong style="color: blue;">{{ valid_amount }}</strong></i>.</p>
+      <p style="font-size:12px"><i>	&#40;*&#41; Generate 10 code every single confirmation. Maximum amount of valid code is 50. </i></p>
+      <br><br>
+      <form action="GenerateCode" method="post" enctype="multipart/form-data">
+        {% csrf_token %}
+        <button type = "submit" id="gc-btn-id" class='gc-btn-cls' onclick="VCConfirmFunction()">Generate code</button>
+        {% if 'successfully' in status %}
+          <p class="status">Status : <strong style="color: green;">{{ status }}</strong></p>
+          <p class="dateime">Date/Time : {{ datetime }}</p>
+        {% elif status == 'Full slot on database.' %}
+          <p class="status">Status : <strong style="color: red;">{{ status }}</strong></p>
+          <p class="dateime">Date/Time : {{ datetime }}</p>
+        {% else %}
+        {% endif %}
+      </form>
+      {% else %}
+      <p>Please login as <a href='http://127.0.0.1:8000/Spot-admin/'>Administrator</a> before running this function</p>
+      {% endif %}
+    </div>
+
+    <div class="subleft" style="background-color:#ddd;">
+      <h2>Verification code management</h2>
+      {%if user.is_superuser %}
+      <p style="font-size:12px"><i>	&#40;*&#41; Manage verification code. </i></p>
+      <br><br>
+      <form action="UpdateCode" method="post" enctype="multipart/form-data">
+      {% csrf_token %}
+          <label for="Filter">Filter: </label>
+          <select style="text-align: center;" id="VClistfilter_id" name = "VClistfilter_n" class = "VClistfilter_cls" onchange="SearchFunction()"> 
+              <option value ="all">All</option>
+              <option value ="valid">Valid</option>
+              <option value ="used">Used</option>
+          </select>
+          
+      </form>
+      {% else %}
+      <p>Please login as <a href='http://127.0.0.1:8000/Spot-admin/'>Administrator</a> before running this function</p>
+      {% endif %}
+    </div>
+  </div>
+
+  <div class="right_2" style="background-color:#ddd;">
+    <h2>Verification list</h2>
+    <p style="font-size:12px"><i>	&#40;*&#41; list of verification code. </i></p>
+    <table id="vcl-table-id">
+      <tr>
+          <th width="20%">Verification code</th>
+          <th width="10%">Status</th>
+          <th width="60%">Remark</th>
+          <th width="8%">Action</th>
+      </tr>
+      {% for item in table %}
+      <tr> 
+          <td>{{ item.VerCode }}</td>
+          {%if item.Status == 'valid' %}
+            <td style="color: green;">{{ item.Status }}</td>
+          {% elif item.Status == 'used' %}
+            <td style="color: red;">{{ item.Status }}</td>
+          {% elif item.Status == 'disabled' %}
+            <td style="color: orange;">{{ item.Status }}</td>
+          {% else %}
+          {% endif %}
+          <td>{{ item.Remark }}</td>
+          <td><button name="dl-btn-n-{{item.id}}">Delete</button></td>
+      </tr>
+      {% endfor %}
+    </table>
+  </div>
+
   <script>
     function myFunction() {
       var input, filter, ul, li, a, i;
@@ -191,7 +315,40 @@ body {
         }
       }
     }
-    </script>
+  </script>
+
+  <script>
+      function SearchFunction() {
+        var input, filter, table, tr, td, i, txtValue;
+        var select_value = 1;
+        input = document.getElementById("VClistfilter_id");
+        filter = input.value.toUpperCase();
+        table = document.getElementById("vcl-table-id");
+        tr = table.getElementsByTagName("tr");
+        for (i = 0; i < tr.length; i++) {
+          td = tr[i].getElementsByTagName("td")[select_value];  
+          if (td) {
+            if (td.innerHTML.toUpperCase() === filter) {
+              tr[i].style.display = "";
+            } else {
+              tr[i].style.display = "none";
+            }
+          }       
+        }
+      }
+  </script>
+
+    <!-- Confirm create ver code: -->
+  <script>
+      function VCConfirmFunction() {
+        let text = "Please confirm:!\nPress OK to create code.";
+        if (confirm(text) == true) {
+          text = "You pressed OK!";
+        } else {
+          text = "You canceled!";
+        }
+      }
+  </script>
 
 </body>
 </html>
