--- a/Spotify/SPOTIFYServer/login/Templates/Spotify_control_vercode.html
+++ b/Spotify/SPOTIFYServer/login/Templates/Spotify_control_vercode.html
@@ -164,40 +164,12 @@ table, th, td {
       <br><br>
       <form action="UpdateCode" method="post" enctype="multipart/form-data">
       {% csrf_token %}
-        <div class="vcl-input-group"></div>
-          <label for="CodeID">Code ID: </label>
-          <input type="text" placeholder="Enter ID" id="cid-input-id" name="cid-input-name">
-          <label for="Edittovalue">Edit To: </label>
-          <select style="text-align: center;" id="VClistedit_id" name = "VClistedit_n" class = "VClistedit_cls"> 
+          <label for="Filter">Filter: </label>
+          <select style="text-align: center;" id="VClistfilter_id" name = "VClistfilter_n" class = "VClistfilter_cls" onchange="SearchFunction()"> 
+              <option value ="all">All</option>
             <option value ="valid">valid</option>
             <option value ="used">used</option>
-            <option value ="disabled">disabled</option>
           </select>
-        <br><br>
-        <div class="vcl-btn-group">
-          <button type = "submit" id="ul-btn-id" class='ul-btn-cls' name="ul-btn-n">Reload</button>
-          <button type = "submit" id="dl-btn-id" class='dl-btn-cls' name="dl-btn-n">Delete</button>
-          <button type = "submit" id="el-btn-id" class='el-btn-cls' name="el-btn-n">Update</button>
-          {% if status == 'Success' %}
-            <p class="status">Status : <strong style="color: green;">{{ status }}</strong></p>
-            <p class="dateime">Date/Time : {{ time }}</p>
-          {% elif status == 'Error' %}
-            <p class="status">Status : <strong style="color: red;">{{ status }}</strong></p>
-            <p class="reason">Reason : {{ detail }}</p>
-            <p class="dateime">Date/Time : {{ time }}</p>
-          {% else %}
-          {% endif %}
-        </div>
-        <br><br>
-          <label for="Filter">Filter: </label>
-          <select style="text-align: center;" id="VClistfilter_id" name = "VClistfilter_n" class = "VClistfilter_cls"> 
-              <option value ="2">Status</option>
-              <option value ="0">ID</option>
-              <option value ="1">Verification code</option>
-              <option value ="3">Remark</option>
-              <option value ="All">All</option>
-          </select>
-          <input type="text" id="Search" onkeyup="SearchFunction()" placeholder="Search for names.." title="Type in a name">
           
       </form>
       {% else %}
@@ -211,14 +183,13 @@ table, th, td {
     <p style="font-size:12px"><i>	&#40;*&#41; list of verification code. </i></p>
     <table id="vcl-table-id">
       <tr>
-          <th width="10%">ID</th>
           <th width="20%">Verification code</th>
           <th width="10%">Status</th>
           <th width="60%">Remark</th>
+          <th width="8%">Action</th>
       </tr>
       {% for item in table %}
       <tr> 
-          <td>{{ item.id }}</td>
           <td>{{ item.VerCode }}</td>
           {%if item.Status == 'valid' %}
             <td style="color: green;">{{ item.Status }}</td>
@@ -229,6 +200,7 @@ table, th, td {
           {% else %}
           {% endif %}
           <td>{{ item.Remark }}</td>
+          <td><button name="dl-btn-n-{{item.id}}">Delete</button></td>
       </tr>
       {% endfor %}
     </table>
@@ -239,17 +211,15 @@ table, th, td {
   <script>
     function SearchFunction() {
       var input, filter, table, tr, td, i, txtValue;
-      var e = document.getElementById("VClistfilter_id");
-      var select_value = e.value;
-      input = document.getElementById("Search");
+      var select_value = 1;
+      input = document.getElementById("VClistfilter_id");
       filter = input.value.toUpperCase();
       table = document.getElementById("vcl-table-id");
       tr = table.getElementsByTagName("tr");
       for (i = 0; i < tr.length; i++) {
         td = tr[i].getElementsByTagName("td")[select_value];  
         if (td) {
-          txtValue = td.textContent || td.innerText;
-          if (txtValue.toUpperCase().indexOf(filter) > -1) {
+          if (td.innerHTML.toUpperCase() === filter) {
             tr[i].style.display = "";
           } else {
             tr[i].style.display = "none";
@@ -257,7 +227,7 @@ table, th, td {
         }       
       }
     }
-    </script>
+</script>
   
   <!-- Confirm create ver code: -->
   <script>
