--- a/Spotify/SPOTIFYServer/login/Templates/Spotify_control_vercode.html
+++ b/Spotify/SPOTIFYServer/login/Templates/Spotify_control_vercode.html
@@ -16,7 +16,7 @@
         <form id="genCodeForm" action="{% url 'GenerateCode' %}" method="post" enctype="multipart/form-data">
           {% csrf_token %}
         </form>
-        <button id="btnGenCode" class="btn btn-primary">Generate code</button>
+        <button id="btnGenCode" class="btn btn-primary"><i class="fa-solid fa-ticket me-2"></i>Generate code</button>
       </div>
       <div class="col-md-5">
         <div class="row">
@@ -118,7 +118,7 @@
     });
 
     // Handle show genearte code confirm modal
-    $genCodeModal = $('#confirmGenerateCode');
+    const $genCodeModal = $('#confirmGenerateCode');
     $genCodeModal.find('button.confirm').click(function() {
       $(this).addClass('disabled');
       $(this).html(`<div class="spinner-border text-light spinner-border-sm" role="status">
@@ -153,7 +153,7 @@
     }
 
     // Setup delete vercode buttons 
-    $deleteCodeModal = $('#confirmDeleteCode');
+    const $deleteCodeModal = $('#confirmDeleteCode');
     let deleteCode, deleteId;
     const setupDeleteCodeButtons = () => {
       $('.vercode-delete').click(function() {
